# DiffDataflowMLPipelines

./: .gitignore  Cargo.toml  README.md
data/.github/workflows/: binary-tests.yml  lib-tests.yml
python/: diabetes_sklearn.py  standard_scale_bench.py
src/: column_encoder.rs  lib.rs  main.rs  row.rs  types.rs
src/feature_encoders/: column_encoder.rs  function_encoder.rs  kbins_discretizer.rs  minmax_scaler.rs  mod.rs  multi_column_encoder.rs  one_hot_encoder.rs  ordinal_encoder.rs  ordinal_encoder_hash.rs  passthrough.rs  pipeline.rs  polynomial_features_encoder.rs  standard_scaler.rs
src/feature_encoders/feature_extraction/: count_vectorizer.rs  hash_vectorizer.rs  mod.rs  tfidf_transformer.rs  utils.rs
src/pipelines/: adult_dataset_reader.rs  diabetes_dataset_reader.rs  mod.rs  pipeline_2.rs  pipeline_3_diabetes.rs
src/types/: dense_vector.rs  integer_assignment_aggregate.rs  mod.rs  row.rs  row_value.rs  safe_f64.rs  safe_hash_map.rs  safe_vec.rs  sparse_vector.rs  vector.rs  vector_position_aggregate.rs
