[package]
name = "DifferentialDataflowMLPipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
#timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow",branch = "master" }
timely = "0.15.0"
