[package]
name = "DifferentialDataflowMLPipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
#timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow",branch = "master" }
timely = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
rand = "0.9.0-beta.1"
csv = "1.3.1"
priority-queue = "1.3"